--- a/hr/views/hr_view.xml
+++ b/hr/views/hr_view.xml
@@ -8,10 +8,12 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//div[@name='button_box']" position="inside">
-                    <button class="oe_inline oe_stat_button" type="action" string="Documents"
+                    <button class="oe_inline oe_stat_button" type="action"
                         name="%(inspy_edm.action_inspy_edm_doc)d"
                         icon="fa-files-o"
-                        context="{'search_default_employee_id': active_id}" />
+                        context="{'search_default_employee_id': active_id}">
+                        <field string="Documents" name="edm_docs_count" widget="statinfo"/>
+                    </button>
                 </xpath>
             </field>
         </record>
